--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -1,46 +1,18 @@
 @media (max-width: 1150px) {
-    // .font1--main::after {
-    // }
-
-    .font1--main {
-        font-size: 11rem;
-
-        &::after {
-            width: 145px;
-            height: 127px;
-            top: -57px;
-            right: -81px;
-        }
+    .harperjourney__text-container {
+        width: 55%;
     }
-
 }
 
 @media (max-width: 975px) {
-
     .header__img-container {
         height: 430px;
-
-    }
-
-    .header__text-container {
-        padding-top: 30%;
-    }
-
-    .font1--main {
-        font-size: 9rem;
-
-        &::after {
-            height: 121px;
-            top: -51px;
-            right: -84px;
-        }
     }
 
     .harperjourney__container {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
     }
 
     .harperjourney__photo-container {
@@ -61,13 +33,12 @@
         width: 100%;
         text-align: center;
     }
-    
+
     .blog-preview__img-1,
     .blog-preview__img-2 {
-        position:static;
+        position: static;
         box-shadow: none;
-        height:auto;
-
+        height: auto;
         box-shadow: 10px 10px $dusk-Blue;
     }
 
@@ -75,18 +46,16 @@
     .blog-preview__container-2 {
         width: 100%;
         margin-bottom: 25px;
-
     }
 
     .blog-preview__block {
-        // display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
     .blog-preview__block--reverse {
-        flex-direction:column-reverse;
+        flex-direction: column-reverse;
     }
 
     .blog-preview__container-2--text,
@@ -99,48 +68,50 @@
     .section__btn-container {
         justify-content: center;
     }
-
 }
 
-// @media (max-width: 800px) {
-//     .header__container2 {
-//         display: none;
-//     }
 
-//     .header__container1 {
-//         background: linear-gradient(to left, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../img/home-image-1.jpg") center;
-//         background-size: cover;
-//         height: 100%;
-//         width: 100%;
-//         justify-content: center;
-//         align-items: center;
-//     }
+@media (max-width: 900px) {
+    .font1--main {
+        font-size: 11rem;
 
-//     .header__text-container {
-//         width: auto;
-//         height: auto;
-//         padding: 0;
-//     }
+        &::after {
+            width: 145px;
+            height: 127px;
+            top: -53px;
+            right: -44px;
+        }
+    }
 
-//     .font1--main {
-//         color: $white-shade;
-
-//         &::after {
-//             display: none;
-//         }
-//     }
-// }
-
-
+    .header__text-container {
+        padding-top: 30%;
+    }
+}
 
 @media (max-width: 800px) {
+    .font1--main {
+        font-size: 10rem;
+
+        &::after {
+            width: 126px;
+            height: 122px;
+            top: -46px;
+            right: -32px;
+        }
+    }
+}
+
+@media (max-width: 750px) {
+    .wrapper {
+        width: 90%;
+    }
 
     .header__container2 {
         display: none;
     }
 
     .header__container1 {
-        background: linear-gradient(to left, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../img/home-image-1.jpg") center;
+        background: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/home-image-1.jpg") center;
         background-size: cover;
         height: 100%;
         width: 100%;
@@ -169,6 +140,7 @@
     .header__other-text {
         bottom: -30px;
     }
+
     .nav__list {
         display: none;
     }
@@ -176,10 +148,11 @@
     .nav__hamburger {
         @include primaryFont(42);
     }
+
     .font2--mobile,
     .nav__hamburger {
-        display:block;
-        margin:0;
+        display: block;
+        margin: 0;
     }
 
     .nav {
@@ -200,9 +173,9 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        
+
         &:first-of-type {
-            margin-bottom:0;
+            margin-bottom: 0;
         }
     }
 
@@ -218,7 +191,7 @@
         margin-left: 0;
     }
 
-    .photos, 
+    .photos,
     .blog,
     .contact {
         padding-bottom: 50px;
@@ -249,18 +222,14 @@
         margin-bottom: 20px;
     }
 
-
     .contact__social-media {
         margin: 0 auto 15px auto;
         width: 60%;
     }
 
-
     .contact__form {
         width: 100%;
     }
-
-
 
     .blog__container {
         flex-direction: column;
@@ -276,11 +245,9 @@
         margin: 0 auto;
     }
 
-
     .blog__post-container {
         width: 100%;
     }
-
 
     .blog__post-box--author {
         display: block;
@@ -290,20 +257,15 @@
         width: auto;
         float: left;
         margin-right: 15px;
-
     }
-
 
     .blog__post-text--author {
         width: auto;
     }
-
-
 }
 
 @media (max-width: 650px) {
     .header__other-text {
         font-size: 5rem;
     }
-
 }
