--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -42,14 +42,13 @@ html {
         &::after {
             content: "";
             display: inline-block;
-            background: url("../img/Circle-text-cropped.png") no-repeat;
+            background: url("../img/circle-text2.png") no-repeat;
             background-size: contain;
             position: absolute;
             width: 150px;
             height: 150px;
-            top: -75px;
-            right: -75px;
-            transform: rotate(-30deg);
+            top: -61px;
+            right: -48px;
         }
     }
 }
@@ -58,7 +57,6 @@ html {
     @include primaryFont(42);
     margin-bottom: 20px;
     &--nav {
-        // @extend .font2;
         margin:0;
     }
 
