--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,16 +280,13 @@ html {
 .font1--main::after {
   content: "";
   display: inline-block;
-  background: url("../img/Circle-text-cropped.png") no-repeat;
+  background: url("../img/circle-text2.png") no-repeat;
   background-size: contain;
   position: absolute;
   width: 150px;
   height: 150px;
-  top: -75px;
-  right: -75px;
-  -webkit-transform: rotate(-30deg);
-  -ms-transform: rotate(-30deg);
-  transform: rotate(-30deg);
+  top: -61px;
+  right: -48px;
 }
 
 .font2 {
@@ -410,7 +407,6 @@ html {
   height: 480px;
   top: -300px;
   left: 0;
-  /*new code*/
   -webkit-box-shadow: 10px 10px white;
   box-shadow: 10px 10px white;
 }
@@ -604,9 +600,8 @@ html {
 }
 
 .building-pic {
-  background: url("../img/home-image-2.jpg");
+  background: url("../img/home-image-2.jpg") center;
   background-size: cover;
-  background-position: center;
   padding: 200px 0;
 }
 
@@ -719,7 +714,6 @@ html {
 
 .icon-sec__text {
   margin-left: 55px;
-  /*New*/
 }
 
 .blog-preview {
@@ -1099,31 +1093,14 @@ html {
 }
 
 @media (max-width: 1150px) {
-  .font1--main {
-    font-size: 11rem;
-  }
-  .font1--main::after {
-    width: 145px;
-    height: 127px;
-    top: -57px;
-    right: -81px;
+  .harperjourney__text-container {
+    width: 55%;
   }
 }
 
 @media (max-width: 975px) {
   .header__img-container {
     height: 430px;
-  }
-  .header__text-container {
-    padding-top: 30%;
-  }
-  .font1--main {
-    font-size: 9rem;
-  }
-  .font1--main::after {
-    height: 121px;
-    top: -51px;
-    right: -84px;
   }
   .harperjourney__container {
     -webkit-box-orient: vertical;
@@ -1201,7 +1178,37 @@ html {
   }
 }
 
+@media (max-width: 900px) {
+  .font1--main {
+    font-size: 11rem;
+  }
+  .font1--main::after {
+    width: 145px;
+    height: 127px;
+    top: -53px;
+    right: -44px;
+  }
+  .header__text-container {
+    padding-top: 30%;
+  }
+}
+
 @media (max-width: 800px) {
+  .font1--main {
+    font-size: 10rem;
+  }
+  .font1--main::after {
+    width: 126px;
+    height: 122px;
+    top: -46px;
+    right: -32px;
+  }
+}
+
+@media (max-width: 750px) {
+  .wrapper {
+    width: 90%;
+  }
   .header__container2 {
     display: none;
   }
